--- a/frontend/src/app/diario-erros/diario-erros.component.html
+++ b/frontend/src/app/diario-erros/diario-erros.component.html
@@ -1,5 +1,5 @@
-<div class="ui-g p-fluid">
-    <div class="p-g-12">
+<div class="p-grid p-fluid">
+    <div class="p-col-12 p-grid">
       <div class="card card-w-title">
         <h1>Diário de Erros</h1>
         <basis-error-stack></basis-error-stack>
