--- a/frontend/src/app/internacao/components/procedimento/procedimento.component.html
+++ b/frontend/src/app/internacao/components/procedimento/procedimento.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="parentFormGroup">
-    <span class="ui-float-label">
+    <span class="p-float-label">
         <p-autoComplete
             field="procedimento"
             [formControlName]="name"
