--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/formulario-triagem.component.css
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/formulario-triagem.component.css
@@ -1,9 +1,9 @@
-.ui-inputtext:disabled {
+.p-inputtext:disabled {
     color: black;
     opacity: unset;
 }
 
-.ui-float-label {
+.p-float-label {
     margin: 5px;
 }
 
