--- a/frontend/src/app/pacientes/formulario/cartao-sus/paciente-form-cartao-sus.component.html
+++ b/frontend/src/app/pacientes/formulario/cartao-sus/paciente-form-cartao-sus.component.html
@@ -1,15 +1,15 @@
-<div class="ui-g p-fluid" [formGroup]="formGroup">
-    <div class="p-g-12" formGroupName="cartaoSUS">
-        <div nInputMask label="Número" formControlName="numero" mask="999999999999999" placeholder="___ ____ ____ ____" tooltip="Informe o número do Cartão SUS (CNS)." class="ui-g-2"></div>
-        <div nAutoComplete [service]="justificativaService" field="valor" formControlName="justificativaId" label="Justificativa da Ausência CNS" class="ui-g-3"></div>
-        <div nAutoComplete [service]="motivoDoCadastroService" field="valor" formControlName="motivoDoCadastroId" label="Motivo Cadastro" class="ui-g-2"></div>
-        <div nDropdown label="Doc. Referência" [options]="opcoesDeDocumentoDeReferencia" formControlName="documentoDeReferencia" class="ui-g-2"></div>
-        <div nInputMask label="Cartão Nacional Saúde Mãe" formControlName="cartaoNacionalSaudeMae" mask="999999999999999" placeholder="___ ____ ____ ____" tooltip="Informe o CNS da mãe do paciente." class="ui-g-3"></div>
+<div class="p-grid p-fluid" [formGroup]="formGroup">
+    <div class="p-col-12 p-grid" formGroupName="cartaoSUS">
+        <div nInputMask label="Número" formControlName="numero" mask="999999999999999" placeholder="___ ____ ____ ____" tooltip="Informe o número do Cartão SUS (CNS)." class="p-md-2"></div>
+        <div nAutoComplete [service]="justificativaService" field="valor" formControlName="justificativaId" label="Justificativa da Ausência CNS" class="p-md-3"></div>
+        <div nAutoComplete [service]="motivoDoCadastroService" field="valor" formControlName="motivoDoCadastroId" label="Motivo Cadastro" class="p-md-2"></div>
+        <div nDropdown label="Doc. Referência" [options]="opcoesDeDocumentoDeReferencia" formControlName="documentoDeReferencia" class="p-md-2"></div>
+        <div nInputMask label="Cartão Nacional Saúde Mãe" formControlName="cartaoNacionalSaudeMae" mask="999999999999999" placeholder="___ ____ ____ ____" tooltip="Informe o CNS da mãe do paciente." class="p-md-3"></div>
     </div>
     <legend>Se Naturalizado Brasileiro</legend>
-    <div class="p-g-12" formGroupName="cartaoSUS">
-        <div madreCalendar label="Data de Entrada no Brasil" formControlName="dataDeEntradaNoBrasil" class="ui-g-4 ui-sm-12"></div>
-        <div madreCalendar label="Data de Naturalização" formControlName="dataDeNaturalizacao" class="ui-g-4 ui-sm-12"></div>
-        <div nInputText label="Portaria" formControlName="portaria" class="ui-g-4 ui-sm-12"></div>
+    <div class="p-col-12 p-grid" formGroupName="cartaoSUS">
+        <div madreCalendar label="Data de Entrada no Brasil" formControlName="dataDeEntradaNoBrasil" class="p-md-4 p-sm-12"></div>
+        <div madreCalendar label="Data de Naturalização" formControlName="dataDeNaturalizacao" class="p-md-4 p-sm-12"></div>
+        <div nInputText label="Portaria" formControlName="portaria" class="p-md-4 p-sm-12"></div>
     </div>
 </div>
