--- a/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
+++ b/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
@@ -1,20 +1,20 @@
-<div class="ui-g p-fluid">
+<div class="p-grid p-fluid">
 
     <!-- {{profileForm.value | json}} -->
     <form autocomplete="off" (ngSubmit)="prescrever()">
         <p-accordion>
             <p-accordionTab [selected]="true" header="Dados Gerais">
                 <form [formGroup]="prescricaoDieta">
-                    <div class="ui-g">
-                        <div class="p-g-12">
-                            <div class="ui-g-6">
-                                <span class="md-inputfield">
+                    <div class="p-grid">
+                        <div class="p-col-12 p-grid">
+                            <div class="p-md-6">
+                                <span class="md-inputfield p-float-label">
                                     <input formControlName="nome" type="text" pInputText disabled />
                                     <label>Paciente</label>
                                 </span>
                             </div>
-                            <div class="ui-g-6">
-                                <span class="md-inputfield">
+                            <div class="p-md-6">
+                                <span class="md-inputfield p-float-label">
                                     <p-calendar [locale]="calendarLocale" formControlName="dataPrescricao"
                                         dateFormat="dd/mm/yy" disabled="true">
                                     </p-calendar>
@@ -23,9 +23,9 @@
                             </div>
                         </div>
 
-                        <div class="p-g-12">
-                            <div class="p-g-12">
-                                <span class="md-inputfield">
+                        <div class="p-col-12 p-grid">
+                            <div class="p-col-12 p-grid">
+                                <span class="md-inputfield p-float-label">
                                     <textarea [rows]="6" [cols]="30" pInputTextarea autoResize="autoResize"
                                         id="observacao" formControlName="observacao"></textarea>
                                     <label>Observações</label>
@@ -33,17 +33,17 @@
                             </div>
                         </div>
 
-                        <div class="p-g-12">
-                            <div class="ui-g-2">
+                        <div class="p-col-12 p-grid">
+                            <div class="p-md-2">
                                 <label>Bomba Infusão?</label>
                             </div>
-                            <div class="ui-g-1">
+                            <div class="p-md-1">
                                 <p-radioButton id="sim" type="radio" value="true" name="bombaInfusao"
                                     formControlName="bombaInfusao" pRadioButton>
                                 </p-radioButton>
                                 <label>Sim</label>
                             </div>
-                            <div class="ui-g-1">
+                            <div class="p-md-1">
                                 <p-radioButton id="nao" type="radio" value="false" name="bombaInfusao"
                                     formControlName="bombaInfusao" pRadioButton>
                                 </p-radioButton>
@@ -57,11 +57,11 @@
 
             <p-accordionTab header="Itens Dieta" [selected]="true">
                 <form [formGroup]="itemPrescricaoDieta" (ngSubmit)="incluirItem()">
-                    <div class="ui-g">
-                        <div class="p-g-12">
+                    <div class="p-grid">
+                        <div class="p-col-12 p-grid">
 
-                            <div class="p-g-12">
-                                <span class="md-inputfield">
+                            <div class="p-col-12 p-grid">
+                                <span class="md-inputfield p-float-label">
                                     <p-dropdown [autoWidth]="false" [filter]="true"
                                         emptyFilterMessage="Nenhum registro encontrado." placeholder="Selecione..."
                                         [options]="tiposItens" formControlName="tipoItemDieta" required #descricaoItem>
@@ -71,16 +71,16 @@
                             </div>
                         </div>
 
-                        <div class="p-g-12">
-                            <div class="ui-g-6">
-                                <span class="md-inputfield">
+                        <div class="p-col-12 p-grid">
+                            <div class="p-md-6">
+                                <span class="md-inputfield p-float-label">
                                     <input type="number" pInputText formControlName="quantidade" />
                                     <label>Quantidade</label>
                                 </span>
                             </div>
 
-                            <div class="ui-g-6">
-                                <span class="md-inputfield">
+                            <div class="p-md-6">
+                                <span class="md-inputfield p-float-label">
                                     <p-dropdown [autoWidth]="false" [filter]="true"
                                         emptyFilterMessage="Nenhum registro encontrado." placeholder="Selecione..."
                                         [options]="listaUnidadeDieta" formControlName="tipoUnidadeDieta">
@@ -91,16 +91,16 @@
 
                         </div>
 
-                        <div class="p-g-12">
-                            <div class="ui-g-5">
-                                <span class="md-inputfield">
+                        <div class="p-col-12 p-grid">
+                            <div class="p-md-5">
+                                <span class="md-inputfield p-float-label">
                                     <input type="number" pInputText formControlName="frequencia" />
                                     <label>Frequência</label>
                                 </span>
                             </div>
 
-                            <div class="ui-g-5">
-                                <span class="md-inputfield">
+                            <div class="p-md-5">
+                                <span class="md-inputfield p-float-label">
                                     <p-dropdown [autoWidth]="false" placeholder="Selecione..." [filter]="true"
                                         emptyFilterMessage="Nenhum registro encontrado." [options]="tiposAprazamentos"
                                         formControlName="tipoAprazamento" #descricaoAprazamento>
@@ -109,22 +109,22 @@
                                 </span>
                             </div>
 
-                            <div class="ui-g-2">
-                                <span class="md-inputfield">
+                            <div class="p-md-2">
+                                <span class="md-inputfield p-float-label">
                                     <input type="number" pInputText formControlName="numeroVezes" />
                                     <label>Número vezes</label>
                                 </span>
                             </div>
                         </div>
-                        <div class="ui-g-6">
+                        <div class="p-md-6">
                             <button label="Adicionar" pButton name="adicionar-item" type="submit"
                                 [disabled]="itemPrescricaoDieta.invalid">
                             </button>
                         </div>
 
-                        <div class="p-g-12"></div>
+                        <div class="p-col-12 p-grid"></div>
 
-                        <div class="p-g-12">
+                        <div class="p-col-12 p-grid">
                             <basis-datatable type="memory" [value]="itensDieta" [disableView]="true"
                                 [disableEdit]="true" [disableDelete]="true">
                                 <p-column header="Item" field="tipoItemDieta">
@@ -156,8 +156,8 @@
             </p-accordionTab>
         </p-accordion>
 
-        <div class="p-g-12">
-            <div class="ui-g-6">
+        <div class="p-col-12 p-grid">
+            <div class="p-md-6">
                 <button pButton type="submit" label="Prescrever">
                 </button>
 
