--- a/frontend/src/app/shared/components/calendar-madre.component.html
+++ b/frontend/src/app/shared/components/calendar-madre.component.html
@@ -1,4 +1,4 @@
-<span #notification form-notification class="md-inputfield" [name]="name" [form]="form">
+<span #notification form-notification class="md-inputfield p-float-label" [name]="name" [form]="form">
     <p-calendar #input
         [ngClass]="{ 'ng-invalid ng-dirty': notification.message }"
         [name]="name"
