--- a/frontend/src/app/suprimentos/components/documento-fiscal-entrada/documento-fiscal-entrada.component.html
+++ b/frontend/src/app/suprimentos/components/documento-fiscal-entrada/documento-fiscal-entrada.component.html
@@ -1,8 +1,8 @@
-<div class="ui-g p-fluid">
-    <div class="p-g-12">
+<div class="p-grid p-fluid">
+    <div class="p-col-12 p-grid">
         <form [formGroup]="parentFormGroup">
-            <div class="ui-g-1">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-md-1">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <p-autoComplete
                         [suggestions]="documentos"
                         (completeMethod)="obterDocumentoPeloNumero($event)"
@@ -13,47 +13,47 @@
                     <label>Número</label>
                 </span>
             </div>
-            <div class="ui-g-1">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-md-1">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <input pInputText type="text" formControlName="serie" />
                     <label>Série</label>
                 </span>
             </div>
-            <div class="ui-g-2">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-md-2">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <input pInputText type="text" formControlName="tipoNotaFiscal" />
                     <label>Tipo de Nota Fiscal</label>
                 </span>
             </div>
-            <div class="ui-g-1">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-md-1">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <input pInputText type="text" formControlName="dataEmissao" />
                     <label>Data de Emissão</label>
                 </span>
             </div>
-            <div class="ui-g-1">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-md-1">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <input pInputText type="text" formControlName="dataEntrada" />
                     <label>Data de Entrada</label>
                 </span>
             </div>
-            <div class="ui-g-1">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-md-1">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <input pInputText type="text" formControlName="valorTotal" />
                     <label>R$ Valor</label>
                 </span>
             </div>
-            <div class="ui-g-2">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-md-2">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <input pInputText type="text" formControlName="valorComprometido" />
                     <label>Valor Comprometido</label>
                 </span>
             </div>
-            <div class="ui-g-1">
-                <button pButton label="Nota Fiscal" icon="ui-icon-add"></button>
+            <div class="p-md-1">
+                <button pButton label="Nota Fiscal" icon="p-icon-add"></button>
             </div>
-            <div class="ui-g-1">
-                <button pButton label="Limpar" icon="ui-icon-minus" (click)="limpar()"></button>
+            <div class="p-md-1">
+                <button pButton label="Limpar" icon="p-icon-minus" (click)="limpar()"></button>
             </div>
         </form>
     </div>
