--- a/frontend/src/app/consulta/components/consulta-calendario/detalha-consulta.component.html
+++ b/frontend/src/app/consulta/components/consulta-calendario/detalha-consulta.component.html
@@ -1,74 +1,74 @@
-<div class="ui-g p-fluid">
+<div class="p-grid p-fluid">
     <form [formGroup]="detalharConsultas">
-        <div class="p-g-12">
+        <div class="p-col-12 p-grid">
             <h1>Detalhamento de Consultas</h1>
 
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input field="prontuario" pInputText formControlName="prontuario" readonly />
                     <label>Prontuário</label>
                 </span>
             </div>
-            <div class="ui-g-4 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-4 p-sm-12">
+                <span class="p-float-label">
                     <input field="nome" pInputText formControlName="nome" readonly />
                     <label>Nome</label>
                 </span>
             </div>
-            <div class="p-g-12"></div>
-            <div class="ui-g-3 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-col-12 p-grid"></div>
+            <div class="p-md-3 p-sm-12">
+                <span class="p-float-label">
                     <input pInputText formControlName="especialidade" readonly />
                     <label>Especialidade</label>
                 </span>
             </div>
-            <div class="ui-g-3 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-3 p-sm-12">
+                <span class="p-float-label">
                     <input pInputText formControlName="profissional" readonly />
                     <label>profissional</label>
                 </span>
             </div>
-            <div class="p-g-12"></div>
-            <div class="ui-g-3 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-col-12 p-grid"></div>
+            <div class="p-md-3 p-sm-12">
+                <span class="p-float-label">
                     <input pInputText formControlName="dataHoraDaConsulta" readonly />
                     <label>Data/Hora da Consulta</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input pInputText formControlName="grade" readonly />
                     <label>Grade</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input pInputText formControlName="numeroSala" readonly />
                     <label>Número da Sala</label>
                 </span>
             </div>
-            <div class="p-g-12"></div>
-            <div class="ui-g-3 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-col-12 p-grid"></div>
+            <div class="p-md-3 p-sm-12">
+                <span class="p-float-label">
                     <input pInputText formControlName="turno" readonly />
                     <label>Turno</label>
                 </span>
             </div>
-            <div class="ui-g-4 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-4 p-sm-12">
+                <span class="p-float-label">
                     <input pInputText formControlName="tipoPagador" readonly />
                     <label>Tipo Pagador</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input pInputText formControlName="clinicaCentralId" readonly />
                     <label>Clinica Central</label>
                 </span>
             </div>
-            <div class="p-g-12"></div>
-            <div class="ui-g-8 ui-sm-12">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-col-12 p-grid"></div>
+            <div class="p-md-8 p-sm-12">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <textarea
                         [rows]="3"
                         [cols]="30"
@@ -80,9 +80,9 @@
                     <label>Justificativa</label>
                 </span>
             </div>
-            <div class="p-g-12"></div>
-            <div class="ui-g-8 ui-sm-12">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-col-12 p-grid"></div>
+            <div class="p-md-8 p-sm-12">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <textarea
                         [rows]="3"
                         [cols]="30"
