--- a/frontend/src/app/consulta/components/emergencia/emergencia.component.html
+++ b/frontend/src/app/consulta/components/emergencia/emergencia.component.html
@@ -1,17 +1,17 @@
-<div class="ui-g p-fluid">
+<div class="p-grid p-fluid">
     <form [formGroup]="formEmergencia" (ngSubmit)="cadastrarConsultas()">
-        <div class="p-g-12">
+        <div class="p-col-12 p-grid">
             <h1>Marcar Consultas - Emergência</h1>
 
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input type="text" pInputText formControlName="numeroConsulta" />
                     <label>Nº da Consulta</label>
                 </span>
             </div>
 
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <p-calendar
                         [locale]="localizacao"
                         [yearRange]="anosDisponiveis"
@@ -24,13 +24,13 @@
                     <label>Data da Consulta</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input type="text" pInputText formControlName="grade" />
                     <label>Grade</label>
                 </span>
             </div>
-            <div class="ui-g-4 ui-sm-12">
+            <div class="p-md-4 p-sm-12">
                 <p-button
                     label="Acessar Calendário"
                     icon="pi pi-calendar"
@@ -39,16 +39,16 @@
                 ></p-button>
             </div>
 
-            <div class="p-g-12"></div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="md-inputfield">
+            <div class="p-col-12 p-grid"></div>
+            <div class="p-md-2 p-sm-12">
+                <span class="md-inputfield p-float-label">
                     <input pInputText disabled="true" formControlName="prontuario" />
                     <label>Prontuário</label>
                 </span>
             </div>
 
-            <div class="ui-g-5 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-5 p-sm-12">
+                <span class="p-float-label">
                     <p-autoComplete
                         field="nome"
                         [suggestions]="pacientes"
@@ -61,14 +61,14 @@
                     <label>Nome</label>
                 </span>
             </div>
-            <div class="p-g-12"></div>
-            <div class="p-g-12">
-                <span class="ui-g-2 ui-float-label">
+            <div class="p-col-12 p-grid"></div>
+            <div class="p-col-12 p-grid">
+                <span class="p-md-2 p-float-label">
                     <input type="text" pInputText formControlName="numeroDeSala" />
                     <label>Nº de sala</label>
                 </span>
 
-                <span class="ui-g-3 md-inputfield">
+                <span class="p-md-3 md-inputfield">
                     <p-dropdown
                         pInputText
                         [filter]="true"
@@ -79,7 +79,7 @@
                     <label>Turno</label>
                 </span>
 
-                <span class="ui-g-4 md-inputfield">
+                <span class="p-md-4 md-inputfield">
                     <p-dropdown
                         pInputText
                         [filter]="true"
@@ -90,10 +90,10 @@
                     <label>Tipo Pagador</label>
                 </span>
             </div>
-            <div class="p-g-12"></div>
+            <div class="p-col-12 p-grid"></div>
 
-            <div class="ui-g-3 ui-sm-12">
-                <span class="md-inputfield">
+            <div class="p-md-3 p-sm-12">
+                <span class="md-inputfield p-float-label">
                     <p-dropdown
                         optionLabel="especialidade"
                         [options]="especialidades"
@@ -106,8 +106,8 @@
                     <label>Especialidade</label>
                 </span>
             </div>
-            <div class="ui-g-3 ui-sm-12">
-                <span class="md-inputfield">
+            <div class="p-md-3 p-sm-12">
+                <span class="md-inputfield p-float-label">
                     <p-dropdown
                         optionLabel="nome"
                         [options]="crm"
@@ -120,23 +120,23 @@
                 </span>
             </div>
 
-            <div class="p-g-12"></div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-col-12 p-grid"></div>
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input type="text" pInputText formControlName="convenio" />
                     <label>Convênio</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input type="text" pInputText formControlName="clinicaCentralId" />
                     <label>Cód. Central</label>
                 </span>
             </div>
 
-            <div class="p-g-12"></div>
-            <div class="ui-g-4 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-col-12 p-grid"></div>
+            <div class="p-md-4 p-sm-12">
+                <span class="p-float-label">
                     <input
                         type="text"
                         pInputText
@@ -146,8 +146,8 @@
                     <label>Observação</label>
                 </span>
             </div>
-            <div class="ui-g-4 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-4 p-sm-12">
+                <span class="p-float-label">
                     <input
                         type="text"
                         pInputText
@@ -158,7 +158,7 @@
                 </span>
             </div>
 
-            <div class="p-g-12">
+            <div class="p-col-12 p-grid">
                 <p-radioButton
                     formControlName="gradesDiponiveis"
                     label="Grades Diponíveis "
@@ -166,9 +166,9 @@
                 ></p-radioButton>
             </div>
 
-            <div class="p-g-12 ui-sm-12">
-                <div class="ui-float-label">
-                    <div class="ui-g-3">
+            <div class="p-col-12  p-grid">
+                <div class="p-float-label">
+                    <div class="p-md-3">
                         <button
                             pButton
                             type="button"
@@ -177,7 +177,7 @@
                             [routerLink]="['/listar-consultas']"
                         ></button>
                     </div>
-                    <div class="ui-g-3">
+                    <div class="p-md-3">
                         <button
                             pButton
                             type="submit"
