--- a/frontend/src/app/farmacia/farmacia/dispensacao/dispensacao.component.html
+++ b/frontend/src/app/farmacia/farmacia/dispensacao/dispensacao.component.html
@@ -1,41 +1,41 @@
-<div class="ui-g p-fluid">
-    <div class="p-g-12">
-        <div class="p-g-12">
+<div class="p-grid p-fluid">
+    <div class="p-col-12 p-grid">
+        <div class="p-col-12 p-grid">
             <h1>Prescrição Médica</h1>
         </div>
-        <div class="p-g-12">
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+        <div class="p-col-12 p-grid">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input pInputText type="text" pTooltip="Informe o Nome." [(ngModel)]="nome" />
                     <label>Nome</label>
                 </span>
             </div>
 
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <p-calendar dateFormat="yy-mm-dd" [(ngModel)]="data"></p-calendar>
                     <label>Data da Prescrição</label>
                 </span>
             </div>
         </div>
-        <div class="p-g-12">
-            <div class="ui-g-2 ui-sm-12">
+        <div class="p-col-12 p-grid">
+            <div class="p-md-2 p-sm-12">
                 <button
                     pButton
                     type="button"
                     label="Pesquisar"
-                    icon="ui-icon-search"
+                    icon="p-icon-search"
                     (click)="listar()"
                 ></button>
             </div>
-            <div class="ui-g-2 ui-sm-12">
+            <div class="p-md-2 p-sm-12">
                 <button 
                     pButton type="button"
                     label="Limpar"
                     (click)="limparPesquisa()">
                 </button>
             </div>
-            <div class="ui-g-2 ui-sm-12">
+            <div class="p-md-2 p-sm-12">
                 <button pButton type="button" label="Exportar"></button>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <p-column header="Início Prescrição" field="dataInicio"></p-column>
         
             <basis-datatable-button
-                ng-reflect-icon="ui-icon-remove-red-eye"
+                ng-reflect-icon="p-icon-remove-red-eye"
                 ng-reflect-b-tooltip="Escolha um registro para visualizar"
                 class="ng-star-inserted"
                 [disabled]="datatable.selectedRow == null"
@@ -61,7 +61,7 @@
             </basis-datatable-button>
         
             <basis-datatable-button
-                class="ui-button-danger"
+                class="p-button-danger"
                 [disabled]="datatable.selectedRow == null"
                 (buttonClick)="btnClick($event)"
                 name="delete"
