--- a/frontend/src/app/farmacia/farmacia/medicamento-detail/medicamento-detail.component.html
+++ b/frontend/src/app/farmacia/farmacia/medicamento-detail/medicamento-detail.component.html
@@ -1,20 +1,20 @@
-<div class="ui-g p-fluid" *ngIf="medicamento">
-    <div class="p-g-12">
+<div class="p-grid p-fluid" *ngIf="medicamento">
+    <div class="p-col-12 p-grid">
         <div class="card card-w-title">
             <h1 >Visualizar Tipo Medicamento</h1>
-            <div class="ui-g">
-                <div class="ui-g-9">
+            <div class="p-grid">
+                <div class="p-md-9">
                     <label>Nome: {{ medicamento.nome }}</label>
                 </div>
-                <div class="ui-g-9">
+                <div class="p-md-9">
                     <label>Descrição: {{ medicamento.descricao }}</label>
                 </div>
-                <div class="ui-g-9">
+                <div class="p-md-9">
                     <label>Concentração: {{ medicamento.concentracao }}</label>
                 </div>
             </div>
-            <div class="ui-g">
-                <div class="ui-g-5 ui-sm-5">
+            <div class="p-grid">
+                <div class="p-md-5 p-sm-5">
                     <button pButton type="button" label="Voltar" routerLink="/medicamentos"></button>
                 </div>
             </div>
