--- a/frontend/src/app/internacao/components/pacientes-lista/pacientes-lista.component.html
+++ b/frontend/src/app/internacao/components/pacientes-lista/pacientes-lista.component.html
@@ -1,55 +1,55 @@
-<div class="ui-g p-fluid">
-    <div class="p-g-12">
+<div class="p-grid p-fluid">
+    <div class="p-col-12 p-grid">
         <div class="card card-w-title">
             <h1>Solicitar Internação</h1>
-            <div class="ui-g">
-                <div class="p-g-12 p-md-12 p-fluid">
-                    <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-grid">
+                <div class="p-md-12 p-fluid">
+                    <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                         <input
                             type="text"
                             pInputText
-                            class="ui-inputtext"
+                            class="p-inputtext"
                             [(ngModel)]="filtroNomeDoPaciente"
                         />
                         <label>Nome paciente</label>
                     </span>
                 </div>
-                <div class="p-g-12">
-                    <div class="ui-g-1"></div>
-                    <div class="ui-g-3">
+                <div class="p-col-12 p-grid">
+                    <div class="p-md-1"></div>
+                    <div class="p-md-3">
                         <button
                             pButton
                             type="button"
                             label="Pesquisar"
-                            icon="ui-icon-search"
+                            icon="p-icon-search"
                             [disabled]="!filtroNomeDoPaciente"
                             (click)="datatable.refresh(filtroNomeDoPaciente)"
                             bTooltip="Pesquisar paciente por nome."
                         ></button>
                     </div>
-                    <div class="ui-g-3">
+                    <div class="p-md-3">
                         <button
                             pButton
                             type="button"
                             label="Limpar"
-                            icon="ui-icon-minus"
+                            icon="p-icon-minus"
                             [disabled]="!filtroNomeDoPaciente"
                             (click)="limpar(datatable)"
                             bTooltip="Limpar campo de pesquisa."
                         ></button>
                     </div>
-                    <div class="ui-g-3">
+                    <div class="p-md-3">
                         <button
                             pButton
                             type="button"
                             label="Cadastrar"
-                            icon="ui-icon-add"
+                            icon="p-icon-add"
                             routerLink="/pacientes/cadastro"
                             bTooltip="Cadastrar novo paciente."
                         ></button>
                     </div>
                 </div>
-                <div class="p-g-12 ui-md-3"></div>
+                <div class="p-col-12 p-grid p-md-3"></div>
                 <basis-datatable
                     type="server"
                     [url]="uri"
@@ -70,7 +70,7 @@
                         icon="add"
                         name="create"
                         [disabled]="datatable.selectedRow ? false : true"
-                        class="ui-button-info"
+                        class="p-button-info"
                     >
                     </basis-datatable-button>
                 </basis-datatable>
