--- a/frontend/src/app/internacao/components/reserva-de-leito/reserva-de-leito.component.html
+++ b/frontend/src/app/internacao/components/reserva-de-leito/reserva-de-leito.component.html
@@ -1,8 +1,8 @@
-<div class="ui-g p-fluid">
+<div class="p-grid p-fluid">
     <form [formGroup]="formGroup">
         <!-- Leito -->
-        <div class="p-g-12">
-            <div class="ui-g-4 ui-md-4 ui-sm-12">
+        <div class="p-col-12 p-grid">
+            <div class="p-md-4 p-sm-12">
                 <app-leito
                     [parentFormGroup]="formGroup"
                     [required]="true"
@@ -15,9 +15,9 @@
             </div>
         </div>
         <!-- Tipo da Reserva -->
-        <div class="p-g-12">
-            <div class="ui-g-4 ui-md-4 ui-sm-12">
-                <span class="ui-float-label">
+        <div class="p-col-12 p-grid">
+            <div class="p-md-4 p-sm-12">
+                <span class="p-float-label">
                     <app-tipo-de-reserva-de-leito
                         [parentFormGroup]="formGroup"
                         [required]="true"
@@ -29,9 +29,9 @@
             </div>
         </div>
         <!-- Origem -->
-        <div class="p-g-12">
-            <div class="ui-g-4 ui-md-4 ui-sm-12">
-                <span class="ui-float-label">
+        <div class="p-col-12 p-grid">
+            <div class="p-md-4 p-sm-12">
+                <span class="p-float-label">
                     <!-- <input type="text" pInputText formControlName="origem" /> -->
                     <app-origem-da-reserva-de-leito
                         [parentFormGroup]="formGroup"
@@ -44,9 +44,9 @@
             </div>
         </div>
         <!-- Data do Lançamento -->
-        <div class="p-g-12">
-            <div class="ui-g-4 ui-md-4 ui-sm-12">
-                <span class="ui-float-label">
+        <div class="p-col-12 p-grid">
+            <div class="p-md-4 p-sm-12">
+                <span class="p-float-label">
                     <p-calendar
                         [locale]="pCalendarConfig.localidade"
                         [yearRange]="pCalendarConfig.anosDisponiveis"
@@ -63,9 +63,9 @@
             </div>
         </div>
         <!-- Data do Início | Data do Fim -->
-        <div class="p-g-12">
-            <div class="ui-g-4 ui-md-4 ui-sm-12">
-                <span class="ui-float-label">
+        <div class="p-col-12 p-grid">
+            <div class="p-md-4 p-sm-12">
+                <span class="p-float-label">
                     <p-calendar
                         [locale]="pCalendarConfig.localidade"
                         [yearRange]="pCalendarConfig.anosDisponiveis"
@@ -80,8 +80,8 @@
                     <label>Data do Início</label>
                 </span>
             </div>
-            <div class="ui-g-4 ui-md-4 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-4 p-sm-12">
+                <span class="p-float-label">
                     <p-calendar
                         [locale]="pCalendarConfig.localidade"
                         [yearRange]="pCalendarConfig.anosDisponiveis"
@@ -98,9 +98,9 @@
             </div>
         </div>
         <!-- Justificativa -->
-        <div class="p-g-12">
-            <div class="ui-g-4 ui-md-4 ui-sm-12">
-                <span class="ui-float-label">
+        <div class="p-col-12 p-grid">
+            <div class="p-md-4 p-sm-12">
+                <span class="p-float-label">
                     <textarea
                         pInputTextarea
                         [rows]="3"
@@ -112,8 +112,8 @@
                 </span>
             </div>
         </div>
-        <div class="p-g-12">
-            <div class="ui-g-4 ui-md-4 ui-sm-12">
+        <div class="p-col-12 p-grid">
+            <div class="p-md-4 p-sm-12">
                 <p-button
                     label="Reservar Leito"
                     icon="pi pi-check"
