--- a/frontend/src/app/internacao/components/reserva-de-leito/reserva-de-leito.component.scss
+++ b/frontend/src/app/internacao/components/reserva-de-leito/reserva-de-leito.component.scss
@@ -1,11 +1,11 @@
 /*
     Work-around for readonly inputs.
  */
-.ui-inputtext:disabled {
+.p-inputtext:disabled {
     color: black;
     opacity: unset;
 }
 
-.ui-float-label {
+.p-float-label {
     margin: 5px;
 }
