--- a/frontend/src/app/internacao/components/solicitacoes-de-internacao/solicitacoes-de-internacao.component.html
+++ b/frontend/src/app/internacao/components/solicitacoes-de-internacao/solicitacoes-de-internacao.component.html
@@ -1,28 +1,28 @@
-<div class="ui-g p-fluid">
-    <div class="p-g-12">
+<div class="p-grid p-fluid">
+    <div class="p-col-12 p-grid">
         <div class="card card-w-title">
             <h1>Solicitações de Internação</h1>
-            <div class="ui-g">
-                <div class="p-g-12 p-md-12 p-fluid">
-                    <span class="md-inputfield" style="margin-top: 5px;">
-                        <input type="text" pInputText class="ui-inputtext" [(ngModel)]="filtroNomeDoPaciente"/>
+            <div class="p-grid">
+                <div class="p-md-12 p-fluid">
+                    <span class="md-inputfield p-float-label" style="margin-top: 5px;">
+                        <input type="text" pInputText class="p-inputtext" [(ngModel)]="filtroNomeDoPaciente"/>
                         <label>Nome do Paciente</label>
                     </span>
                 </div>
-                <div class="p-g-12">
-                    <div class="ui-g-2"></div>
-                    <div class="ui-g-4">
+                <div class="p-col-12 p-grid">
+                    <div class="p-md-2"></div>
+                    <div class="p-md-4">
                         <button
                             pButton
                             type="button"
                             label="Pesquisar"
-                            icon="ui-icon-search"
+                            icon="p-icon-search"
                             (click)="datatable.refresh(filtroNomeDoPaciente)"
                             bTooltip="Pesquisar paciente por nome."
                         ></button>
                     </div>
                 </div>
-                <div class="p-g-12 ui-md-3"></div>
+                <div class="p-col-12 p-grid p-md-3"></div>
                 <basis-datatable
                     type="server"
                     [url]="api"
@@ -43,7 +43,7 @@
                         icon="add"
                         name="create"
                         [disabled]="datatable.selectedRow ? false : true"
-                        class="ui-button-info"
+                        class="p-button-info"
                     >
                     </basis-datatable-button>
                 </basis-datatable>
