--- a/frontend/src/app/internacao/formulario-unidades/components/cirurgia/cirurgia.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/cirurgia/cirurgia.component.html
@@ -1,20 +1,20 @@
 <form [formGroup]="cirurgia">
-    <div class="ui-g">
-        <div class="p-g-12">
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+    <div class="p-grid">
+        <div class="p-col-12 p-grid">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <p-calendar timeOnly="true" formControlName="tempoMin"></p-calendar>
                     <label>Tempo Mínimo</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <p-calendar timeOnly="true" formControlName="tempoMax"></p-calendar>
                     <label>Tempo Máximo</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input
                         type="text"
                         pInputText
@@ -24,8 +24,8 @@
                     <label>Limite de Dias</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input
                         type="text"
                         pInputText
@@ -35,8 +35,8 @@
                     <label>Limite de Dias com Convênios</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input
                         type="text"
                         pInputText
@@ -46,8 +46,8 @@
                     <label>Intervalo Cirurgico</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <span class="ui-float-label">
+            <div class="p-md-2 p-sm-12">
+                <span class="p-float-label">
                     <input
                         type="text"
                         pInputText
