--- a/frontend/src/app/pacientes/formulario/documentos/paciente-form-documentos.component.html
+++ b/frontend/src/app/pacientes/formulario/documentos/paciente-form-documentos.component.html
@@ -1,14 +1,14 @@
-<div class="ui-g p-fluid" [formGroup]="formGroup">
-    <div class="p-g-12" formGroupName="documento">
-        <div nInputText label="Número da Identidades" formControlName="numeroDaIdentidade" class="ui-g-3 ui-sm-12"></div>
-        <div nAutoComplete [service]="orgaoEmissorService" field="valor" formControlName="orgaoEmissorId" label="Órgão Emissor" class="ui-g-3 ui-sm-12"></div>
-        <div nAutoComplete [service]="ufService" field="sigla" formControlName="ufId" label="UF" class="ui-g-2 ui-sm-12"></div>
-        <div madreCalendar label="Data de Emissão" formControlName="data" class="ui-g-2 ui-sm-12"></div>
+<div class="p-grid p-fluid" [formGroup]="formGroup">
+    <div class="p-col-12 p-grid" formGroupName="documento">
+        <div nInputText label="Número da Identidades" formControlName="numeroDaIdentidade" class="p-md-3 p-sm-12"></div>
+        <div nAutoComplete [service]="orgaoEmissorService" field="valor" formControlName="orgaoEmissorId" label="Órgão Emissor" class="p-md-3 p-sm-12"></div>
+        <div nAutoComplete [service]="ufService" field="sigla" formControlName="ufId" label="UF" class="p-md-2 p-sm-12"></div>
+        <div madreCalendar label="Data de Emissão" formControlName="data" class="p-md-2 p-sm-12"></div>
     </div>
-    <div class="p-g-12" formGroupName="documento">
-        <div nInputMask label="CPF" formControlName="cpf" mask="999.999.999-99" placeholder="___.___.___-__" tooltip="Digite o CPF do paciente." class="ui-g-3 ui-sm-12"></div>
-        <div nInputMask label="PIS/PASEP" formControlName="pisPasep" mask="999.99999.99-9" placeholder="___._____.__-_" tooltip="Digite o PIS/PASEP do paciente." class="ui-g-3 ui-sm-12"></div>
-        <div nInputMask label="CNH" formControlName="cnh" mask="99999999999" placeholder="___________" tooltip="Digite a CNH do paciente." class="ui-g-3 ui-sm-12"></div>
-        <div madreCalendar label="Validade da CNH" formControlName="validadeDaCnh" class="ui-g-3 ui-sm-12"></div>
+    <div class="p-col-12 p-grid" formGroupName="documento">
+        <div nInputMask label="CPF" formControlName="cpf" mask="999.999.999-99" placeholder="___.___.___-__" tooltip="Digite o CPF do paciente." class="p-md-3 p-sm-12"></div>
+        <div nInputMask label="PIS/PASEP" formControlName="pisPasep" mask="999.99999.99-9" placeholder="___._____.__-_" tooltip="Digite o PIS/PASEP do paciente." class="p-md-3 p-sm-12"></div>
+        <div nInputMask label="CNH" formControlName="cnh" mask="99999999999" placeholder="___________" tooltip="Digite a CNH do paciente." class="p-md-3 p-sm-12"></div>
+        <div madreCalendar label="Validade da CNH" formControlName="validadeDaCnh" class="p-md-3 p-sm-12"></div>
     </div>
 </div>
