--- a/frontend/src/app/pacientes/formulario/paciente.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente.component.html
@@ -1,5 +1,5 @@
-<div class="ui-g p-fluid">
-    <div class="p-g-12">
+<div class="p-grid">
+    <div class="p-col-12 p-md-12">
         <router-outlet></router-outlet>
     </div>
 </div>
