--- a/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/diversos/diversos.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/diversos/diversos.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="itemPrescricaoProcedimento">
-    <div class="p-g-12" >
-        <div class="ui-g-6">
-            <span class="md-inputfield">
+    <div class="p-col-12 p-grid" >
+        <div class="p-md-6">
+            <span class="md-inputfield p-float-label">
                 <p-dropdown placeholder="Selecione..." [filter]="true" InputText [options]="listaEspeciaisDiversos" formControlName="tipoProcedimentoId" required
                     #especiaisDiversos>
                 </p-dropdown>
