--- a/frontend/src/app/suprimentos/components/autorizacao-fornecimento/autorizacao-fornecimento.component.html
+++ b/frontend/src/app/suprimentos/components/autorizacao-fornecimento/autorizacao-fornecimento.component.html
@@ -1,8 +1,8 @@
-<div class="ui-g p-fluid">
-    <div class="p-g-12">
+<div class="p-grid p-fluid">
+    <div class="p-col-12 p-grid">
         <form [formGroup]="parentFormGroup">
-            <div class="ui-g-1">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-md-1">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <p-autoComplete
                         [suggestions]="autorizacoes"
                         (completeMethod)="obterAutorizacaoFornecimentoPeloNumero($event)"
@@ -13,20 +13,20 @@
                     <label>Número AF</label>
                 </span>
             </div>
-            <div class="ui-g-2">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-md-2">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <input type="text" pInputText formControlName="complemento" />
                     <label>Complemento AF</label>
                 </span>
             </div>
-            <div class="ui-g-1">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-md-1">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <input type="text" pInputText formControlName="fornecedor" />
                     <label>Fornecedor</label>
                 </span>
             </div>
-            <div class="ui-g-1">
-                <span class="md-inputfield" style="margin-top: 5px;">
+            <div class="p-md-1">
+                <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <input type="text" pInputText formControlName="tipoItem" />
                     <label>Tipo Item</label>
                 </span>
