--- a/frontend/src/app/suprimentos/components/consulta-estoque/consulta-estoque.component.html
+++ b/frontend/src/app/suprimentos/components/consulta-estoque/consulta-estoque.component.html
@@ -1,12 +1,12 @@
-<div class="ui-g p-fluid">
-    <div class="p-g-12">
+<div class="p-grid p-fluid">
+    <div class="p-col-12 p-grid">
         <div class="card card-w-title">
             <h1>Consultar Estoque</h1>
-            <div class="ui-g">
+            <div class="p-grid">
                 <form [formGroup]="consultaForm">
-                    <div class="p-g-12">
-                        <div class="ui-g-3">
-                            <span class="md-inputfield" style="margin-top: 5px;">
+                    <div class="p-col-12 p-grid">
+                        <div class="p-md-3">
+                            <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                                 <p-autoComplete
                                     [suggestions]="almoxarifados"
                                     (completeMethod)="obterAlmoxarifadoPorDescricao($event.query)"
@@ -18,8 +18,8 @@
                                 <label>Almoxarifado</label>
                             </span>
                         </div>
-                        <div class="ui-g-3">
-                            <span class="md-inputfield" style="margin-top: 5px;">
+                        <div class="p-md-3">
+                            <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                                 <p-autoComplete
                                     [suggestions]="fornecedores"
                                     (completeMethod)="getFornecedoresPorNomeFantasia($event.query)"
@@ -32,9 +32,9 @@
                             </span>
                         </div>
                     </div>
-                    <div class="p-g-12">
-                        <div class="ui-g-2">
-                            <span class="md-inputfield" style="margin-top: 5px;">
+                    <div class="p-col-12 p-grid">
+                        <div class="p-md-2">
+                            <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                                 <p-autoComplete
                                     [suggestions]="materiais"
                                     (completeMethod)="obterMateriaisPorNome($event.query)"
@@ -46,15 +46,15 @@
                                 <label>Material</label>
                             </span>
                         </div>
-                        <div class="ui-g-2">
-                            <span class="md-inputfield" style="margin-top: 5px;">
-                                <input type="text" pInputText class="ui-inputtext" disabled />
+                        <div class="p-md-2">
+                            <span class="md-inputfield p-float-label" style="margin-top: 5px;">
+                                <input type="text" pInputText class="p-inputtext" disabled />
                                 <label>Termo Livre</label>
                             </span>
                         </div>
-                        <div class="ui-g-1">
+                        <div class="p-md-1">
                             <label>Estocável</label>
-                            <div class="p-g-12">
+                            <div class="p-col-12 p-grid">
                                 <p-radioButton
                                     name="estocavel"
                                     [value]="true"
@@ -62,7 +62,7 @@
                                     formControlName="estocavel"
                                 ></p-radioButton>
                             </div>
-                            <div class="p-g-12">
+                            <div class="p-col-12 p-grid">
                                 <p-radioButton
                                     name="estocavel"
                                     [value]="false"
@@ -71,9 +71,9 @@
                                 ></p-radioButton>
                             </div>
                         </div>
-                        <div class="ui-g-1">
+                        <div class="p-md-1">
                             <label>Ativo</label>
-                            <div class="p-g-12">
+                            <div class="p-col-12 p-grid">
                                 <p-radioButton
                                     name="ativo"
                                     [value]="true"
@@ -81,7 +81,7 @@
                                     formControlName="ativo"
                                 ></p-radioButton>
                             </div>
-                            <div class="p-g-12">
+                            <div class="p-col-12 p-grid">
                                 <p-radioButton
                                     name="ativo"
                                     [value]="false"
@@ -91,9 +91,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="p-g-12">
-                        <div class="ui-g-2">
-                            <span class="md-inputfield" style="margin-top: 5px;">
+                    <div class="p-col-12 p-grid">
+                        <div class="p-md-2">
+                            <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                                 <p-autoComplete
                                     [suggestions]="unidadesMedida"
                                     (completeMethod)="obterUnidadeMedidaPorDescricao($event.query)"
@@ -106,8 +106,8 @@
                                 <label>Unidade</label>
                             </span>
                         </div>
-                        <div class="ui-g-2">
-                            <span class="md-inputfield" style="margin-top: 5px;">
+                        <div class="p-md-2">
+                            <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                                 <p-autoComplete
                                     [suggestions]="grupos"
                                     (completeMethod)="obterGruposPorDescricao($event.query)"
@@ -120,8 +120,8 @@
                                 <label>Grupo</label>
                             </span>
                         </div>
-                        <div class="ui-g-2">
-                            <span class="md-inputfield" style="margin-top: 5px;">
+                        <div class="p-md-2">
+                            <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                                 <p-autoComplete
                                     [suggestions]="classificacoes"
                                     (completeMethod)="getClassificacoesPorDescricao($event.query)"
@@ -135,28 +135,28 @@
                         </div>
                     </div>
                 </form>
-                <div class="p-g-12">
-                    <div class="ui-g-2"></div>
-                    <div class="ui-g-3">
+                <div class="p-col-12 p-grid">
+                    <div class="p-md-2"></div>
+                    <div class="p-md-3">
                         <button
                             pButton
                             type="button"
                             label="Pesquisar"
-                            icon="ui-icon-search"
+                            icon="p-icon-search"
                             (click)="pesquisar()"
                         ></button>
                     </div>
-                    <div class="ui-g-3">
+                    <div class="p-md-3">
                         <button
                             pButton
                             type="button"
                             label="Limpar"
-                            icon="ui-icon-minus"
+                            icon="p-icon-minus"
                             (click)="limpar()"
                         ></button>
                     </div>
                 </div>
-                <div class="p-g-12 ui-md-3"></div>
+                <div class="p-col-12 p-grid p-md-3"></div>
                 <basis-datatable
                     type="server"
                     [url]="api"
