--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -178,3 +178,24 @@
 .card h1:first-child {
     margin-top: 0.667em;
 }
+
+.p-accordion .p-accordion-header-link {
+    background-color: #00796B !important;
+    color: #ffffff !important;
+    font-size: 1em;
+    -moz-transition: background-color 0.3s;
+    -o-transition: background-color 0.3s;
+    -webkit-transition: background-color 0.3s;
+    transition: background-color 0.3s;
+    margin-top: 2px;
+}
+
+.p-accordion .p-accordion-tab-active .p-accordion-header-link {
+    background-color: #CDDC39 !important;
+    color: #212121 !important;
+}
+
+p-inputmask {
+    padding: 0 !important;
+}
+
